--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 <p>Perubahan di local</p>
+
+<p>Perubahan di github.</p>  
 </body>
 </html>
